--- a/#source/scss/global.scss
+++ b/#source/scss/global.scss
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap');
+// font-family: "Racing Sans One", sans-serif;
 @font-face {
     font-family: 'Poetsenone';
     src: url('../fonts/PoetsenOne-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Mustard';
+    src: url('../fonts/Mustard-Medium.otf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
 
 $bace-color: #21292F;
 $base-green: #158466;
