--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -849,3 +849,297 @@
         }
     }
 }
+
+// slider baners
+
+.mainslider__slide {
+
+    .mainslider__bg {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 50% 50%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    &.ms1 {
+        background: transparent;
+
+        .imgwrapper img {
+            max-height: 100%;
+            object-fit: inherit;
+            width: auto;
+            height: auto;
+            max-width: 610px;
+            position: absolute;
+            max-width: 100%;
+            bottom: 0;
+            top: initial;
+        }
+
+        .slideinfo {
+            text-align: center;
+            padding-right: 80px;
+
+            .slidelogo {
+                max-width: 160px;
+            }
+
+            .title {
+                font-family: "Racing Sans One", sans-serif;
+                color: #842C2C;
+                font-size: 55px;
+                line-height: 120%;
+                text-transform: uppercase;
+                margin-bottom: 35px;
+
+                span {
+                    display: block;
+                    font-size: 48px;
+                    color: #FBCA81;
+                }
+            }
+
+            a {
+                border-color: #832C2C;
+                color: #832C2C;
+                display: inline-flex;
+
+                &:hover {
+                    background: #832C2C;
+
+                    color: #fff;
+
+                    svg path {
+                        fill: #fff;
+                    }
+                }
+            }
+        }
+    }
+
+    &.ms2 {
+        background: #0A2543;
+
+        .imgwrapper {
+            .imgwrapper__logo {
+                width: 157px;
+                height: 157px;
+                object-fit: inherit;
+                z-index: 2;
+                position: absolute;
+                top: 58px;
+                left: 25px;
+            }
+        }
+
+        .slideinfo {
+            .title {
+                margin-bottom: 15px;
+                font-size: 40px;
+                font-weight: 700;
+                color: #fff;
+                text-transform: uppercase;
+            }
+
+            .subtitle {
+                font-weight: 600;
+                font-size: 25px;
+                color: #fff;
+                text-transform: uppercase;
+                margin-bottom: 24px;
+            }
+
+            .infotext {
+                color: #fff;
+                font-size: 15px;
+                text-transform: uppercase;
+                font-weight: 500;
+                font-family: 'Mustard';
+                margin-bottom: 40px;
+            }
+
+            a {
+                &:hover {
+                    color: #0A2543;
+
+                    svg path {
+                        fill: #0A2543;
+                    }
+                }
+            }
+        }
+    }
+
+    .slidertextline {
+        height: 1px;
+        width: 100%;
+        background: #fff;
+        max-width: 250px;
+        position: relative;
+        display: block;
+        margin: 24px 0;
+
+        &::after {
+            content: '';
+            display: inline-block;
+            width: 6px;
+            height: 6px;
+            border-radius: 50%;
+            position: absolute;
+            right: 0;
+            top: -3px;
+            background: #fff;
+        }
+    }
+}
+
+@media(max-width:1599.8px) {
+    .mainslider__slide.ms1 .slideinfo .title {
+        font-size: 46px;
+        margin-bottom: 30px;
+
+        span {
+            font-size: 42px;
+        }
+    }
+
+    .mainslider__slide.ms2 .slideinfo .title {
+        font-size: 36px;
+        line-height: 140%;
+    }
+
+    .mainslider__slide.ms2 .slideinfo .subtitle {
+        margin-bottom: 15px;
+    }
+
+    .mainslider__slide .slidertextline {
+        margin: 15px 0;
+    }
+    
+    .mainslider__slide.ms2 .slideinfo .infotext {
+        margin-bottom: 30px;
+    }
+
+    .mainslider__slide.ms2 .imgwrapper .imgwrapper__logo {
+        width: 140px;
+        height: 140px;
+        left: 20px;
+        top: 50px;
+    }
+}
+
+@media(max-width:1399.8px) {
+    .mainslider__slide.ms1 .slideinfo {
+        padding-right: 0;
+    }
+}
+
+@media(max-width:991.8px) {
+    
+    .mainslider__slide.ms1 .slideinfo .title {
+        font-size: 32px;
+        margin-bottom: 20px;
+
+        span {
+            font-size: 28px;
+        }
+    }
+
+    .mainslider__slide.ms1 .slideinfo .slidelogo {
+        max-width: 140px;
+    }
+
+    .mainslidersect .mainslider__slide .imgwrapper {
+        height: 300px;
+    }
+
+    .mainslider__slide.ms2 .slideinfo .title {
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+
+    .mainslider__slide.ms2 .slideinfo .subtitle {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    .mainslider__slide .slidertextline {
+        margin: 10px 0;
+    }
+
+    .mainslider__slide.ms2 .slideinfo .infotext {
+        margin-bottom: 15px;
+    }
+
+    .mainslider__slide.ms2 .imgwrapper .imgwrapper__logo {
+        width: 120px;
+        height: 120px;
+        left: 0;
+    }
+
+}
+
+@media(max-width:767.8px) {
+    .mainslider__slide.ms1 .imgwrapper,
+    .mainslider__slide.ms2 .imgwrapper {
+        display: none;
+    }
+
+    .mainslider__slide.ms1 .slideinfo {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .mainslider__slide.ms2 .slideinfo .title {
+        br {
+            display: none;
+        }
+    }
+
+    .mainslider__slide.ms2 .slideinfo .infotext br {
+        display: none;
+    }
+}
+
+@media(max-width:575.8px) {
+    .mainslidersect .mainslider__slide .imgwrapper {
+        height: auto;
+    }
+
+    .mainslider__slide.ms1, .mainslider__slide.ms2 {
+        padding: 10px 15px;
+    }
+
+    .mainslider__slide.ms1 .slideinfo {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .mainslidersect .mainslider__slide .row {
+        width: inherit;
+    }
+
+    .mainslider__slide.ms2 .slideinfo .title {
+        font-size: 24px;
+    }
+
+    .mainslider__slide.ms2 .slideinfo {
+        padding: 0 10px;
+    }
+
+    .mainslider__slide.ms1 .slideinfo .slidelogo {
+        max-width: 100px;
+    }
+
+    .mainslider__slide.ms2 .slideinfo .subtitle {
+        font-size: 18px;
+    }
+
+    .mainslider__slide.ms2 .slideinfo .infotext {
+        font-size: 14px;
+    }
+   
+}
