--- a/#source/scss/product.scss
+++ b/#source/scss/product.scss
@@ -263,11 +263,15 @@
 
     p {
         position: relative;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         padding-left: 50px;
         color: $bace-color;
         font-size: 16px;
         line-height: 150%;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
 
         .imgwrap {
             position: absolute;
@@ -291,6 +295,16 @@
         span {
             color: $base-green;
             font-weight: 500;
+        }
+
+        a {
+            color: #21292F;
+            text-decoration: underline;
+            text-underline-offset: 3px;
+
+            &:hover {
+                color: #158466;
+            }
         }
     }
 }
@@ -1069,7 +1083,7 @@
 // upd1
 
 .productinfo__alergyfree {
-    padding: 20px 0 45px;
+    padding: 20px 0 25px;
 
     .categorysect__discounts {
         padding: 0;
@@ -1237,6 +1251,7 @@
         }
     }
 }
+
 .productinfo__price {
     border-bottom: none;
 }
@@ -1418,5 +1433,97 @@
 
     .prinfobox__body .supplementfacts .note {
         margin-top: 30px;
+    }
+}
+
+// -
+.product__autoreorder {
+    padding: 20px 0;
+    border-bottom: 1px solid #D9DBDF;
+
+    p {
+        margin-bottom: 13px;
+        color: #21292F;
+        font-size: 14px;
+        font-weight: 600;
+    }
+
+    .prar__wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .prar__box {
+        width: 100%;
+        max-width: calc(33.333% - 10px);
+        flex: 0 0 calc(33.333% - 10px);
+
+        input {
+            display: none;
+
+            &:checked+label {
+                border-color: #158466;
+
+                &::after {
+                    border:1px solid #158466;
+                    background: url(../img/checkout/radiocheck.png) no-repeat center / 10px;
+                }
+            }
+        }
+
+        label {
+            display: block;
+            color: #000;
+            font-size: 14px;
+            font-weight: 500;
+            width: 100%;
+            height: 100%;
+            padding: 5px 15px 5px 45px;
+            border: 1px solid #D9DBDF;
+            border-radius: 10px;
+            min-height: 50px;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            position: relative;
+            transition: 0.3s;
+
+            &::after {
+                content: '';
+                display: inline-block;
+                width: 18px;
+                height: 18px;
+                border-radius: 50%;
+                border: 1px solid rgba(#3B454C, 0.4);
+                position: absolute;
+                left: 15px;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+        }
+    }
+}
+
+@media(max-width:1399.8px) {
+    .product__autoreorder .prar__box label {
+        padding: 5px 8px 5px 35px;
+    }
+
+    .product__autoreorder .prar__box label:after {
+        left: 8px;
+    }
+
+}
+
+@media(max-width:991.8px) {
+    .product__autoreorder .prar__box {
+        max-width: 100%;
+        flex: 0 0 100%;
+        margin-bottom: 10px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
