--- a/#source/scss/global.scss
+++ b/#source/scss/global.scss
@@ -492,3 +492,25 @@ input[type=number] {
     }
 
 }
+
+.striprow {
+    height: 35px;
+    background: #11562C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    p {
+        margin: 0;
+        color: #fff;
+        font-weight: 500;
+        font-size: 15px;
+        text-transform: capitalize;
+    }
+
+    img {
+        width: 20px;
+        margin-right: 10px;
+        margin-top: -2px;
+    }
+}
