--- a/#source/scss/category.scss
+++ b/#source/scss/category.scss
@@ -97,8 +97,12 @@
 .categorysect__discounts {
     padding: 30px 0;
     border-bottom: 1px solid #D9DBDF;
-    display: flex;
-    flex-wrap: wrap;
+   
+
+    .catdiscounts__boxes {
+        display: flex;
+        flex-wrap: wrap;
+    }
 
     a {
         width: 100%;
@@ -954,5 +958,50 @@
             border-radius: 100px 0 0 100px;
             
         }
+    }
+}
+
+// ---------------
+.labelsrow {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.labelbox {
+    position: relative;
+    display: inline-block;
+    padding: 5px 30px 5px 15px;
+    border: 1px solid #158466;
+    border-radius: 20px;
+    margin-right: 15px;
+    margin-top: 10px;
+
+    p {
+        margin: 0;
+    }
+
+    .remove {
+        border: none;
+        padding: 0;
+        outline: none;
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        background: transparent;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        i {
+            color: #158466;
+        }
+
+    }
+}
+
+@media(max-width:575.8px) {
+    .labelbox p {
+        font-size: 14px;
     }
 }
