--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -1102,7 +1102,7 @@
 
 // --08.11
 .maincategories {
-    padding: 155px 0 15px;
+    padding: 95px 0 15px;
 
     .d-flex {
         justify-content: space-between;
@@ -1179,7 +1179,11 @@
         padding-top: 30px;
     }
 }
-
+@media(max-width:1550.8px) {
+    .maincategories {
+        padding-top: 75px;
+    }
+}
 @media(max-width:1399.8px) {
     .mnslide.v2 {
         .mbsl__info .title {
@@ -1284,7 +1288,7 @@
     }
 
     .maincategories {
-        padding: 80px 0 0 0;
+        padding: 60px 0 0 0;
     }
 
 }
