--- a/#source/scss/product.scss
+++ b/#source/scss/product.scss
@@ -1088,6 +1088,8 @@
     .categorysect__discounts {
         padding: 0;
         border: none;
+        display: flex;
+        flex-wrap: wrap;
     }
 
     .discountbox {
