--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -42,9 +42,9 @@ header.header {
                 width: 100%;
                 background: #FCFCFC;
                 height: 43px;
-                border-radius: 0 35px 35px 0;
+                border-radius: 35px;
                 border: 1px solid #D9DBDF;
-                border-left: none;
+                // border-left: none;
                 padding-left: 20px;
                 padding-right: 45px;
                 font-weight: 500;
@@ -587,11 +587,13 @@ header.header {
                 margin-right: 0;
             }
 
-            a {
+            a,
+            span {
                 font-weight: 500;
                 font-size: 15px;
                 color: rgba(59, 69, 77, 1);
                 transition: 0.3s;
+                cursor: pointer;
 
                 &:hover {
                     color: #158466;
@@ -600,6 +602,13 @@ header.header {
         }
     }
 }
+
+
+
+
+
+
+
 
 @media(max-width:1199.8px) {
 
@@ -703,7 +712,7 @@ header.header {
             left: 0;
             top: 81px;
             background: #fff;
-            z-index: 2;
+            z-index: 4;
             width: 100%;
             max-width: 100%;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -903,12 +912,12 @@ header.header {
     }
 
     .header__nav ul {
-       padding-top: 5px;
+        padding-top: 5px;
 
         li {
             margin-right: 15px;
             margin-top: 10px;
-    
+
             a {
                 font-size: 16px;
             }
@@ -1198,10 +1207,438 @@ header.header {
     }
 }
 
+
+// - search section
+.header-leftcol {
+    width: 100%;
+    max-width: calc(100% - 360px);
+    flex: 0 0 calc(100% - 360px);
+}
+
+.header-rightcol {
+    width: 100%;
+    max-width: 360px;
+    flex: 0 0 360px;
+}
+
+.header__leftsect .header__searchbox .searchinputfield {
+    width: 100%;
+}
+
+.header__searchbox {
+    position: relative;
+}
+
+.search-dd {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 28px;
+    height: 345px;
+    background: #fff;
+    z-index: 2;
+    border-radius: 10px;
+    border: 1px solid #D9D9D9;
+    display: flex;
+    flex-wrap: wrap;
+    display: none;
+
+    &.active {
+        display: flex;
+    }
+
+    .title {
+        margin-bottom: 20px;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 110%;
+        color: #3B454D;
+    }
+
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+
+        li {
+            margin-bottom: 8px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            a {
+                font-size: 16px;
+                line-height: 150%;
+                color: #3B454D;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+                display: block;
+                transition: 0.3s;
+
+                &:hover {
+                    color: #11562c;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+
+    .search-dd__tags {
+        display: flex;
+        flex-wrap: wrap;
+
+        .discountbox {
+            width: 100%;
+            max-width: 69px;
+            flex: 0 0 69px;
+            text-align: center;
+
+            p {
+                font-size: 11px;
+                margin-top: 5px;
+                line-height: 125%;
+                margin-bottom: 25px;
+                color: #3B454C;
+                transition: 0.3s;
+            }
+
+            .discountbox__circle {
+                position: relative;
+                width: 50px;
+                margin: 0 auto;
+
+                &::after {
+                    content: "";
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    position: absolute;
+                    right: -2px;
+                    bottom: -2px;
+                    background: #11CC9A;
+                    z-index: -1;
+                    -webkit-transition: 0.1s;
+                    transition: 0.1s;
+                }
+            }
+
+            &:hover {
+                p {
+                    color: #11562c;
+                }
+            }
+
+        }
+    }
+
+    .search-dd__productswrap {
+        width: 100%;
+        max-width: 27%;
+        flex: 0 0 27%;
+        padding-right: 10px;
+    }
+
+    .search-dd__tagswrap {
+        width: 100%;
+        max-width: 46%;
+        flex: 0 0 46%;
+        padding-left: 10px;
+    }
+
+    .search-dd__brandswrap {
+        width: 100%;
+        max-width: 27%;
+        flex: 0 0 27%;
+        padding-left: 10px;
+    }
+
+    .search-dd__productswrap,
+    .search-dd__tagswrap,
+    .search-dd__brandswrap {
+        height: 100%;
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background: #ededed;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: #11562b41;
+            border-radius: 10px;
+        }
+    }
+
+}
+
+// shop products
+.header__nav ul {
+    position: relative;
+
+    li {
+        span {
+            position: relative;
+            z-index: 3;
+        }
+    }
+}
+
+.shopproducts-wrap {
+    position: absolute;
+    left: 0;
+    top: calc(100% - 20px);
+    z-index: 2;
+    display: none;
+    padding-top: 30px;
+
+    &:hover {
+        display: block;
+    }
+}
+
+.shopproducts {
+    background: #fff;
+    border-radius: 10px;
+    border: 1px solid #D9D9D9;
+    padding: 28px;
+    width: 100%;
+    max-width: 1006px;
+    display: flex;
+
+    .title {
+        color: #3B454D;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 110%;
+        margin-bottom: 28px;
+    }
+}
+
+.shopproducts__sortby {
+    width: 100%;
+    max-width: 164px;
+    flex: 0 0 164px;
+    border-right: 1px solid #D9D9D9;
+}
+
+.shopproducts__tabs {
+    width: 100%;
+    max-width: calc(100% - 164px);
+    flex: 0 0 calc(100% - 164px);
+    padding-left: 28px;
+}
+
+.shopproducts__radio {
+    margin-bottom: 24px;
+
+    input {
+        display: none;
+
+        &:checked+label {
+            &::after {
+                border-color: #158466;
+                background: url(../img/checkout/radiocheck.png) no-repeat center / 12px;
+            }
+        }
+    }
+
+    label {
+        display: block;
+        color: #3B454D;
+        cursor: pointer;
+        position: relative;
+        padding-left: 38px;
+
+        &::after {
+            content: "";
+            display: inline-block;
+            width: 26px;
+            height: 26px;
+            border-radius: 50%;
+            border: 2px solid rgba(59, 69, 76, 0.4);
+            position: absolute;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            margin-top: -1px;
+        }
+    }
+
+
+}
+
+.shopproducts__tab {
+
+    &.hide {
+        display: none;
+    }
+
+    .shoppr__tags {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -8px;
+        margin-right: -8px;
+
+        .discountbox {
+            width: 100%;
+            max-width: 69px;
+            flex: 0 0 69px;
+            margin: 0 8px;
+            text-align: center;
+
+            .discountbox__circle {
+                position: relative;
+                width: 50px;
+                margin: 0 auto;
+
+                &::after {
+                    content: "";
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                    position: absolute;
+                    right: -2px;
+                    bottom: -2px;
+                    background: #11CC9A;
+                    z-index: -1;
+                    -webkit-transition: 0.1s;
+                    transition: 0.1s;
+                }
+            }
+
+            p {
+                font-size: 11px;
+                line-height: 125%;
+                margin: 5px 0 25px;
+            }
+        }
+    }
+
+    .shoppr__brands {
+        ul {
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0;
+            padding: 0;
+            border: none;
+
+            li {
+                width: 100%;
+                max-width: 33.333%;
+                flex: 0 0 33.333%;
+                margin: 0;
+                margin-bottom: 7px;
+                padding-right: 10px;
+
+                a {
+                    color: #3B454D;
+                    font-size: 16px;
+                    line-height: 150%;
+                    font-weight: 400;
+                    transition: 0.3s;
+
+                    &:hover {
+                        color: #158466;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.header__nav .header__nav-dditem span {
+    &:hover {
+        &+.shopproducts-wrap {
+            display: flex;
+        }
+    }
+}
+
+
+@media(max-width:1600.8px) {
+
+    .search-dd {
+        padding: 20px;
+    }
+
+    .search-dd .title {
+        margin-bottom: 10px;
+    }
+
+    .search-dd ul li a {
+        font-size: 14px;
+    }
+
+    .search-dd .search-dd__tags .discountbox p {
+        margin-bottom: 12px;
+    }
+
+}
+
+@media(max-width:1199.8px) {
+    .shopproducts .title {
+        margin-bottom: 15px;
+    }
+
+    .shopproducts__radio {
+        margin-bottom: 15px;
+    }
+
+    .shopproducts__tab .shoppr__brands ul li a {
+        font-size: 15px;
+        display: block;
+    }
+
+    .shopproducts__tab .shoppr__tags .discountbox p {
+        margin-bottom: 15px;
+    }
+
+    .shopproducts-wrap.show {
+        display: flex !important;
+    }
+}
+
 @media(max-width:991.8px) {
     .header__rightsect.selleracc {
         justify-content: flex-end;
     }
+
+    .header__rightsect {
+        padding-left: 0;
+    }
+
+    .header-rightcol {
+        width: 100%;
+        max-width: 120px;
+        flex: 0 0 120px;
+    }
+
+    .header-leftcol {
+        width: 100%;
+        max-width: calc(100% - 120px);
+        flex: 0 0 calc(100% - 120px);
+    }
+
+    .header__searchbox {
+        position: initial;
+    }
+
+    .search-dd {
+        top: 54px;
+    }
+
+    .shopproducts__tab .shoppr__brands ul li {
+        max-width: 50%;
+        flex: 0 0 50%;
+    }
+
+
 }
 
 @media(max-width:767.8px) {
@@ -1219,4 +1656,35 @@ header.header {
     .header__rightsect .header__accdropdown {
         width: 240px;
     }
+
+    .header__searchbox {
+        position: relative;
+    }
+
+    .search-dd {
+        top: 100%;
+        border-radius: 0 0 10px 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+}
+
+@media(max-width:575.8px) {
+    .search-dd {
+        padding: 15px 10px;
+        overflow: auto;
+    }
+
+    .search-dd .search-dd__productswrap,
+    .search-dd .search-dd__tagswrap,
+    .search-dd .search-dd__brandswrap {
+        max-width: 100%;
+        flex: 0 0 100%;
+        height: auto;
+        overflow: initial;
+        padding: 0 !important;
+        margin-bottom: 15px;
+    }
+
+
+
 }
